# vizo

./: CMakeLists.txt  README.md
include/vizo/package/: dependency.h  json.h  package.h  package_info.h  profile.h  target.h
include/vizo/util/: json.h  lists.h
src/: main.c
src/package/: dependency.c  package_info.c
src/util/: json.c  list.c
